@@ -1,5 +1,6 @@
 package com.jayway.restassured.module.mockmvc.internal;
 
+import com.jayway.restassured.config.EncoderConfig;
 import com.jayway.restassured.config.LogConfig;
 import com.jayway.restassured.config.RestAssuredConfig;
 import com.jayway.restassured.filter.log.RequestLoggingFilter;
@@ -21,6 +22,7 @@ import com.jayway.restassured.response.Cookies;
 import com.jayway.restassured.response.Header;
 import com.jayway.restassured.response.Headers;
 import com.jayway.restassured.specification.ResponseSpecification;
+import org.apache.commons.lang3.StringUtils;
 import org.springframework.test.web.servlet.MockMvc;
 import org.springframework.test.web.servlet.ResultHandler;
 import org.springframework.test.web.servlet.setup.DefaultMockMvcBuilder;
@@ -44,6 +46,7 @@ import static org.apache.commons.lang3.StringUtils.isNotEmpty;
 public class MockMvcRequestSpecificationImpl implements MockMvcRequestSpecification, MockMvcAuthenticationSpecification {
 
     private static final String CONTENT_TYPE = "content-type";
+    private static final String CHARSET = "charset";
 
     private LogRepository logRepository;
 
@@ -586,6 +589,13 @@ public class MockMvcRequestSpecificationImpl implements MockMvcRequestSpecificat
         if (requestLoggingFilter == null && logConfig.isLoggingOfRequestAndResponseIfValidationFailsEnabled()) {
             log().ifValidationFails(logConfig.logDetailOfRequestAndResponseIfValidationFails(), logConfig.isPrettyPrintingEnabled());
         }
+
+        EncoderConfig encoderConfig = restAssuredMockMvcConfig.getEncoderConfig();
+        if (requestContentType != null && encoderConfig.shouldAppendDefaultContentCharsetToContentTypeIfUndefined() && !StringUtils.containsIgnoreCase(requestContentType, CHARSET)) {
+            // Append default charset to request content type
+            requestContentType += "; charset=" + encoderConfig.defaultContentCharset();
+        }
+
         return new MockMvcRequestSenderImpl(instanceMockMvc, params, queryParams, formParams, attributes, restAssuredMockMvcConfig, requestBody, requestContentType,
                 requestHeaders, cookies, multiParts, requestLoggingFilter, resultHandlers, interceptor, basePath, responseSpecification, authentication,
                 logRepository);
