@@ -8,6 +8,7 @@ Change log next version
 * Content-Type is now sent to the server if explicitly defined by a GET request (issue 362).
 * Added syntactic sugar method "logRequestTo" to com.jayway.restassured.filter.log.RequestLoggingFilter as a shortcut for doing "new RequestLoggingFilter(printStream)".
 * Default Content-Type charset is now visible in the request log.
+* Default Content-Type charset is now appended to Content-Type header in Spring MockMvc module by default. Use "given().config(RestAssuredMockMvcConfig.config().encoderConfig(encoderConfig().appendDefaultContentCharsetToContentTypeIfUndefined(false))). .." to revert to previous behavior.
 
 Change log 2.3.4 (2014-10-06)
 -----------------------------
